<resources>
    <string name="app_name">Smart Tree</string>
    <string name="welcome_message">Smart Tree</string>
    <string name="subtitle">Enjoy the city life...</string>
    <string name="message_about">About</string>
    <string name="message_interact">Interact</string>
    <string name="message_sharing">Sharing</string>
    <string name="message_nearby">Nearby</string>
    <string name="message_camera">Camera</string>
    <string name="message_comment">Comment</string>
    <string name="title_activity_maps">Map</string>
    <string name="scan_title">Scan for tree information</string>
    <string name="scan_message">Scan</string>
    <string name="camera_btn">Take Photo!</string>
    <string name="video_btn">Video!</string>
    <string name="audio_btn">Audio!</string>
    <string name="menu_settings">Settings</string>
    <string name="toggle_turn_on">On</string>
    <string name="toggle_turn_off">Off</string>
    <string name="switch_button_text">Street Light</string>
    <string name="action_settings">Settings</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="str_btn_find">Find</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="register_title">Sign Up</string>
    <string name="login_title">Sign In</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="register_btn">Register</string>
    <string name="intro_message">
        <![CDATA[
            This sample demonstrates how to record video using Camera2 API.
        ]]>
    </string>
    <string-array name="place_type">
        <item>airport</item>
        <item>amusement_park</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>hospital</item>
        <item>movie_theater</item>
        <item>restaurant</item>
        <item>school</item>
    </string-array>

    <string-array name="place_type_name">
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Hospital</item>
        <item>Movie Theater</item>
        <item>Restaurant</item>
        <item>School</item>
    </string-array>
    <string name="title_activity_video">VideoActivity</string>
</resources>
